--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,5 +28,7 @@ jobs:
       with:
         java-version: '17'
         distribution: 'adopt'
+    - name: Make gradlew executable
+      run: chmod +x ./gradlew
     - name: Run build with Gradle Wrapper
       run: ./gradlew build test
